--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -93,7 +93,7 @@ LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) $(HT
 
 # Distribution stuff.
 
-EXTRA_DIST = ifm.lyx advent.cmd advent.ifm advent1.scr advent2.scr	advent3.scr advent4.scr advent5.scr advent6.scr advent7.scr example.ifm	tkifm.txt
+EXTRA_DIST = ifm.lyx gfdl.lyx advent.cmd advent.ifm advent1.scr advent2.scr advent3.scr advent4.scr advent5.scr advent6.scr advent7.scr example.ifm	    tkifm.txt macros.tex
 
 
 # Cleaning stuff.
@@ -220,7 +220,7 @@ pdf: ifm.pdf
 
 ps: ifm.ps
 
-fig: example.eps advent.eps
+fig: cover.eps example.eps advent.eps
 
 .lyx.ps:;	lyx --export ps $< > $@
 .lyx.tex:;	lyx --export latex $< > $@
