--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -78,11 +78,16 @@ SUFFIXES = .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex
 
 IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib
 
+# Stuff for generating PDF.
+
+PDF_TITLE = IFM Version $(VERSION)
+PDF_AUTHOR = Glenn Hutchings
+
 HTML_TITLE = IFM Version $(VERSION)
 HTML_ADDR = zondo@pillock.freeserve.co.uk
 HTML_DIR = html
 HTML_DISP = -split 5 -link 5 -show_section_numbers -html_version 4.0
-HTML_IMAGE = -no_external_images -local_icons -white -image_type gif
+HTML_IMAGE = -no_external_images -local_icons -white -image_type png
 HTML_NAV = -next_page_in_navigation
 HTML_TEXT = -title "$(HTML_TITLE)" -address "$(HTML_ADDR)" -font_size 12pt
 HTML_FILE = -dir $(HTML_DIR) -mkdir 
@@ -93,7 +98,7 @@ LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) $(HT
 
 # Distribution stuff.
 
-EXTRA_DIST = ifm.lyx gfdl.lyx advent.cmd advent.ifm advent1.scr advent2.scr advent3.scr advent4.scr advent5.scr advent6.scr advent7.scr example.ifm	    tkifm.txt macros.tex
+EXTRA_DIST = ifm.lyx gfdl.lyx advent.cmd advent.ifm advent1.scr advent2.scr advent3.scr advent4.scr advent5.scr advent6.scr advent7.scr example.ifm	    cover.ifm tkifm.txt macros.tex
 
 
 # Cleaning stuff.
@@ -226,7 +231,7 @@ fig: cover.eps example.eps advent.eps
 .lyx.tex:;	lyx --export latex $< > $@
 .ps.gv:;	gv -a4 -scale -1 -spartan $<
 .tex.aux:;	latex $<; latex $<; latex $<
-.lyx.pdf:;	tex2pdf $<
+.lyx.pdf:;	tex2pdf -t "$(PDF_TITLE)" -a "$(PDF_AUTHOR)" $<
 .ifm.fig:;	$(IFM) -m -f fig -o $@ $<
 .fig.eps:;	fig2dev -L eps $< > $@
 .fig.png:;	fig2dev -L png $< > $@
