--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -70,9 +70,9 @@ ifm2dev = @ifm2dev@
 scr2ifm = @scr2ifm@
 tkifm = @tkifm@
 
-STYLES = puzzle.ifm special.ifm
+STYLES = helvetica.ifm puzzle.ifm special.ifm
 
-LIBFILES = ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
+LIBFILES = ifm-alias.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
 
 pkgdata_DATA = $(LIBFILES)
 
