--- a/progs/Makefile.in
+++ b/progs/Makefile.in
@@ -71,7 +71,7 @@ bin_SCRIPTS = @tkifm@ @ifm2dev@ @scr2ifm@
 
 EXTRA_SCRIPTS = tkifm ifm2dev scr2ifm
 
-EXTRA_DIST = tkifm.tcl scr2ifm.pl
+EXTRA_DIST = tkifm.tcl ifm2dev.pl scr2ifm.pl
 
 CLEANFILES = $(bin_SCRIPTS)
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
