--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -72,31 +72,35 @@ tkifm = @tkifm@
 
 bin_PROGRAMS = ifm
 
-SRCS = ifm-dot.c ifm-driver.c ifm-fig.c ifm-main.c ifm-map.c ifm-parse.y ifm-path.c ifm-ps.c ifm-raw.c ifm-rec.c ifm-scan.l ifm-task.c ifm-text.c ifm-tk.c ifm-util.c ifm-vars.c
+SRCS = ifm-dot.c ifm-driver.c ifm-fig.c ifm-gpp.c ifm-main.c ifm-map.c	  ifm-parse.y ifm-path.c ifm-ps.c ifm-raw.c ifm-rec.c ifm-scan.l ifm-task.c ifm-text.c ifm-tk.c ifm-util.c ifm-vars.c
 
 
-HDRS = ifm-dot.h ifm-driver.h ifm-fig.h ifm-main.h ifm-map.h ifm-parse.h ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-task.h ifm-text.h ifm-tk.h	 ifm-util.h ifm-vars.h
+HDRS = ifm-dot.h ifm-driver.h ifm-fig.h ifm-gpp.h ifm-main.h ifm-map.h	  ifm-parse.h ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-task.h ifm-text.h ifm-tk.h ifm-util.h ifm-vars.h
 
 
 ifm_SOURCES = $(SRCS) $(HDRS)
 
 EXTRA_DIST = ifm-parse.c ifm-scan.c
 
-FIG = $(top_srcdir)/fig
+FIG_SRC = $(top_srcdir)/fig
+FIG_BIN = $(top_builddir)/fig
 
-VARS = $(top_srcdir)/vars/src
+VARS_SRC = $(top_srcdir)/vars/src
+VARS_BIN = $(top_builddir)/vars/src
 
 ifm_LDADD = -lfig -lvars -lm
 
-ifm_LDFLAGS = -L$(FIG) -L$(VARS)
+ifm_LDFLAGS = -L$(FIG_BIN) -L$(VARS_BIN)
 
 YFLAGS = -d -v
 
 SYSDEF = -DSYSINIT=\"ifm-init.ifm\"
 
-PATHDEF = -DIFMPATH=\"$(pkgdatadir):.\"
+PATHDEF = -DIFMPATH=\"$(pkgdatadir)\"
 
-INCLUDES = -I$(FIG) -I$(VARS) $(SYSDEF) $(PATHDEF)
+GPPDEF = -DGPPPATH=\"$(pkglibdir)/gpp\"
+
+INCLUDES = -I$(FIG_SRC) -I$(VARS_SRC) $(SYSDEF) $(PATHDEF) $(GPPDEF)
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -107,9 +111,9 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I../etc
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-ifm_OBJECTS =  ifm-dot.o ifm-driver.o ifm-fig.o ifm-main.o ifm-map.o \
-ifm-parse.o ifm-path.o ifm-ps.o ifm-raw.o ifm-rec.o ifm-scan.o \
-ifm-task.o ifm-text.o ifm-tk.o ifm-util.o ifm-vars.o
+ifm_OBJECTS =  ifm-dot.o ifm-driver.o ifm-fig.o ifm-gpp.o ifm-main.o \
+ifm-map.o ifm-parse.o ifm-path.o ifm-ps.o ifm-raw.o ifm-rec.o \
+ifm-scan.o ifm-task.o ifm-text.o ifm-tk.o ifm-util.o ifm-vars.o
 ifm_DEPENDENCIES = 
 LEX_OUTPUT_ROOT = @LEX_OUTPUT_ROOT@
 LEXLIB = @LEXLIB@
@@ -125,10 +129,10 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 TAR = gtar
 GZIP_ENV = --best
 DEP_FILES =  .deps/ifm-dot.P .deps/ifm-driver.P .deps/ifm-fig.P \
-.deps/ifm-main.P .deps/ifm-map.P .deps/ifm-parse.P .deps/ifm-path.P \
-.deps/ifm-ps.P .deps/ifm-raw.P .deps/ifm-rec.P .deps/ifm-scan.P \
-.deps/ifm-task.P .deps/ifm-text.P .deps/ifm-tk.P .deps/ifm-util.P \
-.deps/ifm-vars.P
+.deps/ifm-gpp.P .deps/ifm-main.P .deps/ifm-map.P .deps/ifm-parse.P \
+.deps/ifm-path.P .deps/ifm-ps.P .deps/ifm-raw.P .deps/ifm-rec.P \
+.deps/ifm-scan.P .deps/ifm-task.P .deps/ifm-text.P .deps/ifm-tk.P \
+.deps/ifm-util.P .deps/ifm-vars.P
 SOURCES = $(ifm_SOURCES)
 OBJECTS = $(ifm_OBJECTS)
 
@@ -352,7 +356,7 @@ mostlyclean-generic distclean-generic clean-generic \
 maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
 
-$(bin_PROGRAMS): $(FIG)/libfig.a $(VARS)/libvars.a
+$(bin_PROGRAMS): $(FIG_BIN)/libfig.a $(VARS_BIN)/libvars.a
 
 ifm-parse.h: ifm-parse.c
 
