Changed files around.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -72,7 +72,8 @@ tkifm = @tkifm@
 
 STYLES = helvetica.ifm puzzle.ifm special.ifm
 
-LIBFILES = ifm-alias.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
+LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
+
 
 pkgdata_DATA = $(LIBFILES)
 
