--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,7 +2,8 @@
 
 STYLES = helvetica.ifm puzzle.ifm special.ifm
 
-LIBFILES = ifm-alias.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
+LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt \
+$(STYLES)
 
 pkgdata_DATA = $(LIBFILES)
 
