--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -6,6 +6,9 @@ IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib -S helvetica
 
 SET = -s task_graph_rooms=1
 
+prep: ruins.ifm
+	$(IFM) -P $<
+
 ps fig: maptest.ifm
 	$(IFM) -f $@ -m -o maptest.$@ $<
 
