--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/ifm-main.c)
 AC_CONFIG_AUX_DIR(etc)
 
-AM_INIT_AUTOMAKE(ifm, 4.2)
+AM_INIT_AUTOMAKE(ifm, 5.0)
 AM_CONFIG_HEADER(etc/config.h)
 AC_CONFIG_SUBDIRS(vars)
 
@@ -50,9 +50,6 @@ if test $PERL = no; then
    scr2ifm=
 fi
 
-dnl Check for executable suffix.
-AC_CYGWIN
-
 dnl Check whether to install vars library.
 AC_ARG_ENABLE(vars-install,
 AC_HELP_STRING(--enable-vars-install, install vars support library),
@@ -62,11 +59,12 @@ export VARS_INSTALL
 dnl Write Makefiles.
 AC_OUTPUT(
 Makefile
-src/Makefile
-fig/Makefile
-lib/Makefile
+demos/Makefile
 doc/Makefile
-maps/Makefile
+fig/Makefile
+gpp/Makefile
+lib/Makefile
 progs/Makefile
+src/Makefile
 tests/Makefile
 )
