--- a/Makefile.in
+++ b/Makefile.in
@@ -72,9 +72,7 @@ tkifm = @tkifm@
 
 AUTOMAKE_OPTIONS = foreign check-news
 
-SUBDIRS = vars fig src lib doc maps progs tests
-
-EXTRA_DIST = README.unix README.maps
+SUBDIRS = vars fig gpp src lib doc progs demos tests
 
 EXTRA_DIRS = etc contrib win32
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -377,6 +375,7 @@ dist-extra:
 	   cp -rp $(top_srcdir)/$$dir $(distdir);			\
 	   rm -rf $(distdir)/$$dir/CVS;					\
 	   rm -f $(distdir)/$$dir/.cvsignore;				\
+	   rm -f $(distdir)/$$dir/*~;					\
 	done
 
 dist-header:
