--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,6 @@
 ## Automake template for IFM library files.
 
-STYLES = helvetica.ifm puzzle.ifm special.ifm
+STYLES = helvetica.ifm puzzle.ifm special.ifm verbose.ifm
 
 LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt \
 $(STYLES)
