--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -70,7 +70,7 @@ ifm2dev = @ifm2dev@
 scr2ifm = @scr2ifm@
 tkifm = @tkifm@
 
-STYLES = helvetica.ifm puzzle.ifm special.ifm
+STYLES = helvetica.ifm puzzle.ifm special.ifm verbose.ifm
 
 LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(STYLES)
 
