--- a/fig/Makefile.in
+++ b/fig/Makefile.in
@@ -11,6 +11,9 @@
 # PARTICULAR PURPOSE.
 
 
+# Common Makefile targets.
+
+
 SHELL = @SHELL@
 
 srcdir = @srcdir@
@@ -125,7 +128,7 @@ OBJECTS = $(libfig_a_OBJECTS) $(testfig_OBJECTS)
 all: all-redirect
 .SUFFIXES:
 .SUFFIXES: .S .c .o .s
-$(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
+$(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/etc/Makefile.common
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu fig/Makefile
 
 Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
