--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,6 +11,11 @@
 # PARTICULAR PURPOSE.
 
 
+# Common Makefile targets.
+
+# Show recent source changes.
+
+
 SHELL = @SHELL@
 
 srcdir = @srcdir@
@@ -119,6 +124,8 @@ LINTDEFS = -I. $(CPPFLAGS) $(DEFS) $(INCLUDES)
 
 LINTCMD = $(LINT) $(LINTARGS) $(LINTLOCAL) $(LINTGLOBAL) $(LINTFLAGS)	$(LINTDEFS)
 
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -157,7 +164,7 @@ OBJECTS = $(ifm_OBJECTS)
 all: all-redirect
 .SUFFIXES:
 .SUFFIXES: .S .c .l .lint .o .s .y
-$(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
+$(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/etc/Makefile.common
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu src/Makefile
 
 Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
@@ -381,6 +388,11 @@ ifm-parse.h: ifm-parse.c
 .c.lint:; @ $(LINTCMD) $<
 
 lint:; $(LINTCMD) $(DEFS) $(INCLUDES) $(SRCS)
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
