--- a/demos/Makefile.in
+++ b/demos/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -80,6 +82,8 @@ IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib -S helvetica
 SET = -s task_graph_rooms=1
 
 CLEANFILES = *.ps *.fig *.dot
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -194,6 +198,11 @@ ps fig: maptest.ifm
 dot: ruins.ifm
 	$(IFM) $(SET) -f dot -t -o ruins.dot $<
 	dot -Tps ruins.dot > ruins.ps
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
