--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -89,8 +91,8 @@ PDF_AUTHOR = Glenn Hutchings
 HTML_TITLE = IFM Version $(VERSION)
 HTML_ADDR = zondo@pillock.freeserve.co.uk
 HTML_DIR = html
-HTML_DISP = -split 5 -link 5 -show_section_numbers -html_version 4.0
-HTML_IMAGE = -no_external_images -local_icons -white -image_type png
+HTML_DISP = -split 4 -link 4 -show_section_numbers -html_version 4.0
+HTML_IMAGE = -no_external_images -local_icons -white -image_type gif
 HTML_NAV = -next_page_in_navigation
 HTML_TEXT = -title "$(HTML_TITLE)" -address "$(HTML_ADDR)" -font_size 12pt
 HTML_FILE = -dir $(HTML_DIR) -mkdir 
@@ -108,6 +110,8 @@ EXTRA_DIST = ifm.lyx gfdl.lyx advent.cmd advent.ifm advent1.scr advent2.scr adve
 
 CLEAN_DOC = *.ps *.eps *.pdf
 CLEAN_TEX = ifm.tex *.aux *.dvi *.lof *.lot *.log *.toc *.out
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -283,6 +287,8 @@ htmlclean:; rm -rf $(HTML_DIR) $(CLEAN_TEX)
 
 # Other stuff.
 
+test:; opera `pwd`/$(HTML_DIR)/index.htm
+
 distclean-local: clean-doc
 
 install-data-hook: install-doc
@@ -290,6 +296,11 @@ install-data-hook: install-doc
 dist-hook: dist-doc
 
 edit:; lyx ifm.lyx
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
