--- a/fig/Makefile.in
+++ b/fig/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -94,6 +96,8 @@ testfig_LDFLAGS = -L$(VARS)
 testfig_LDADD = libfig.a -lvars -lm
 
 CLEANFILES = test.fig* test.eps testfig
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -328,6 +332,11 @@ maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 test: testfig
 	./testfig | tee test.fig
 	fig2dev -L eps test.fig > test.eps
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
