--- a/gpp/Makefile.in
+++ b/gpp/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -80,6 +82,8 @@ gpp_SOURCES = gpp.c
 EXTRA_DIST = gpphelp.pp
 
 CLEANFILES = gpp.1 gpp.html gpp.tex
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -331,6 +335,11 @@ gpp.html: gpp gpphelp.pp
 
 gpp.tex: gpp gpphelp.pp
 	./gpp -H -Dlatex $(srcdir)/gpphelp.pp -o gpp.tex
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
