--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -81,6 +83,8 @@ LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt $(ST
 pkgdata_DATA = $(LIBFILES)
 
 EXTRA_DIST = $(LIBFILES)
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -206,6 +210,11 @@ install uninstall-am uninstall all-redirect all-am all installdirs \
 mostlyclean-generic distclean-generic clean-generic \
 maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
