--- a/progs/Makefile.in
+++ b/progs/Makefile.in
@@ -13,6 +13,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -77,6 +79,8 @@ EXTRA_SCRIPTS = tkifm ifm2dev scr2ifm
 EXTRA_DIST = tkifm.tcl ifm2dev.pl scr2ifm.pl
 
 CLEANFILES = $(bin_SCRIPTS)
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -220,6 +224,11 @@ ifm2dev: ifm2dev.pl
 	chmod +x $@
 
 test:; perl ifm2dev.pl -L png -v lgop.ifm
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
