--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -15,6 +15,8 @@
 
 # Common Makefile targets.
 
+# Show recent source changes.
+
 
 SHELL = @SHELL@
 
@@ -93,6 +95,8 @@ EXTRA_DIST = README $(TESTS) $(EXP)
 SUFFIXES = .ifm .test .task .prof .tk .ps .rec
 
 CLEANFILES = *.out
+
+DAYS = 7
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
@@ -241,6 +245,11 @@ mostlyclean distclean maintainer-clean
 
 tests:		$(SRCS)
 		perl Maketests "$(IFM)" $(SRCS)
+
+log:;	@ echo
+	@ echo Finding source changes in the last $(DAYS) days...
+	@ echo
+	@ cvslog $(DAYS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
