--- a/progs/Makefile.am
+++ b/progs/Makefile.am
@@ -1,10 +1,10 @@
 ## Automake template for IFM extra programs.
 
-bin_SCRIPTS = @tkifm@ @ifm2dev@ @scr2ifm@
+bin_SCRIPTS = @tkifm@ @ifm2dev@ @ifm2tex@ @scr2ifm@
 
-EXTRA_SCRIPTS = tkifm ifm2dev scr2ifm
+EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex scr2ifm
 
-EXTRA_DIST = tkifm.tcl ifm2dev.pl scr2ifm.pl
+EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl scr2ifm.pl
 
 tkifm: tkifm.tcl
 	echo '#! $(WISH) -f' > $@
@@ -21,8 +21,16 @@ ifm2dev: ifm2dev.pl
 	cat $< >> $@
 	chmod +x $@
 
+ifm2tex: ifm2tex.pl
+	echo '#! $(PERL)' > $@
+	cat $< >> $@
+	chmod +x $@
+
 CLEANFILES = $(bin_SCRIPTS)
 
-test:; perl ifm2dev.pl -L png -v lgop.ifm
+test:;	perl ifm2tex.pl -m test.ifm
+	for i in 1 2 3; do latex test.tex; done
+	dvips -o test.ps test.dvi
+	gv test.ps
 
 include $(top_srcdir)/etc/Makefile.common
