--- a/gpp/Makefile.in
+++ b/gpp/Makefile.in
@@ -72,6 +72,7 @@ VERSION = @VERSION@
 WISH = @WISH@
 YACC = @YACC@
 ifm2dev = @ifm2dev@
+ifm2tex = @ifm2tex@
 scr2ifm = @scr2ifm@
 tkifm = @tkifm@
 
