--- a/etc/config.h.in
+++ b/etc/config.h.in
@@ -1,32 +1,32 @@
-/* etc/config.h.in.  Generated automatically from configure.in by autoheader.  */
+/* etc/config.h.in.  Generated from configure.in by autoheader.  */
 
-/* Configuration stuff */
-
-
-/* Name of this package */
-#undef PACKAGE
-
-/* Package version */
-#undef VERSION
-
-/* Email address */
-#undef EMAIL
-
-/* Whether debugging malloc is required */
-#undef WITH_DMALLOC
-
-/* Define if you have the `m' library (-lm). */
+/* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
 /* Name of package */
 #undef PACKAGE
 
-/* Define if you have the ANSI C header files. */
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
+/* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
 /* Version number of package */
 #undef VERSION
 
-/* Define if `lex' declares `yytext' as a `char *' by default, not a `char[]'.
-   */
+/* Define to 1 if `lex' declares `yytext' as a `char *' by default, not a
+   `char[]'. */
 #undef YYTEXT_POINTER
