--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -134,30 +134,14 @@ tkifm = @tkifm@
 docdir = $(prefix)/doc
 ifmdocdir = $(docdir)/ifm
 
+PDF_TITLE = IFM Version $(VERSION)
+PDF_AUTHOR = Glenn Hutchings
+
 
 # General rules.
 SUFFIXES = .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex
 
 IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib
-
-
-# Stuff for generating PDF.
-PDF_TITLE = IFM Version $(VERSION)
-PDF_AUTHOR = Glenn Hutchings
-
-HTML_TITLE = IFM Version $(VERSION)
-HTML_ADDR = zondo@pillock.freeserve.co.uk
-HTML_DIR = html
-HTML_DISP = -split 4 -link 4 -show_section_numbers -html_version 4.0
-HTML_IMAGE = -no_external_images -local_icons -white -image_type gif
-HTML_NAV = -next_page_in_navigation
-HTML_TEXT = -title "$(HTML_TITLE)" -address "$(HTML_ADDR)" -font_size 12pt
-HTML_FILE = -dir $(HTML_DIR) -mkdir 
-HTML_EXTRA = -short_extn
-
-LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) \
-$(HTML_TEXT) $(HTML_EXTRA)
-
 
 
 # Distribution stuff.
@@ -349,28 +333,24 @@ fig: cover.eps example.eps advent.eps
 .fig.png:;	fig2dev -L png $< > $@
 .fig.tex:;	fig2dev -L latex $< > $@
 
-# Stuff for generating HTML.
-
-.PHONY: html
-
-html: fig ifm.tex ifm.aux
-	$(LATEX2HTML) ifm.tex
+html: fig ifm.lyx
+	lyx2html ifm.lyx
 
 # Installation stuff.
 
 install-doc: install-html install-pdf
 
 install-html: $(ifmdocdir)
-	@ if test -d $(srcdir)/$(HTML_DIR); then			\
+	@ if test -d $(srcdir)/ifm; then				\
 	   set -x;							\
-	   rm -rf $(ifmdocdir)/$(HTML_DIR);				\
-	   cp -rf $(srcdir)/$(HTML_DIR) $(ifmdocdir);			\
+	   rm -rf $(ifmdocdir)/html;					\
+	   cp -rf $(srcdir)/ifm $(ifmdocdir)/html;			\
 	fi
 
 install-pdf: $(ifmdocdir)
 	@ if test -f $(srcdir)/ifm.pdf; then				\
 	   set -x;							\
-	   $(INSTALL_DATA) $(srcdir)/ifm.pdf $(ifmdocdir);			\
+	   $(INSTALL_DATA) $(srcdir)/ifm.pdf $(ifmdocdir);		\
 	fi
 
 $(ifmdocdir):
@@ -380,8 +360,8 @@ $(ifmdocdir):
 	$(mkinstalldirs) $(ifmdocdir)
 
 dist-doc: $(EXTRA_DIST)
-	if test -d $(srcdir)/$(HTML_DIR); then				\
-	   cp -rf $(srcdir)/$(HTML_DIR) $(distdir);			\
+	if test -d $(srcdir)/ifm; then					\
+	   cp -rf $(srcdir)/ifm $(distdir);				\
 	fi
 	if test -f $(srcdir)/ifm.pdf; then				\
 	   cp -r $(srcdir)/ifm.pdf $(distdir);				\
@@ -392,11 +372,11 @@ clean-doc: realclean
 realclean: htmlclean
 	rm -rf $(CLEAN_DOC)
 
-htmlclean:; rm -rf $(HTML_DIR) $(CLEAN_TEX)
+htmlclean:; rm -rf ifm $(CLEAN_TEX)
 
 # Other stuff.
 
-test:; opera `pwd`/$(HTML_DIR)/index.htm
+test:; opera `pwd`/ifm/index.htm
 
 distclean-local: clean-doc
 
