--- a/Makefile.am
+++ b/Makefile.am
@@ -40,6 +40,6 @@ dist-touch:
 
 dist-cleanup:
 	rm -f $(distdir)/etc/config.h
-	rm -f $(distdir)/etc/stamp-h
+	rm -f $(distdir)/etc/stamp-h*
 
 include $(top_srcdir)/etc/Makefile.common
