--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -334,7 +334,7 @@ fig: cover.eps example.eps advent.eps
 .fig.tex:;	fig2dev -L latex $< > $@
 
 html: fig ifm.lyx
-	lyx2html ifm.lyx
+	lyx2html -title IFM ifm.lyx
 
 # Installation stuff.
 
