--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -149,7 +149,7 @@ HELP2MAN = help2man -N -n "$(MAN_TITLE)"
 
 
 # General rules.
-SUFFIXES = .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex
+SUFFIXES = .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex .rtf
 
 
 # Distribution stuff.
@@ -176,7 +176,7 @@ DIST_COMMON = $(top_srcdir)/etc/Makefile.common Makefile.am Makefile.in
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex .gv
+.SUFFIXES: .lyx .ps .tex .aux .pdf .eps .fig .ifm .png .tex .rtf .gv
 $(srcdir)/Makefile.in:  Makefile.am $(top_srcdir)/etc/Makefile.common $(top_srcdir)/configure.in $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
 	  $(AUTOMAKE) --gnu  doc/Makefile
@@ -372,9 +372,11 @@ uninstall-man: uninstall-man1
 
 # Main targets.
 
-doc: fig pdf html man
+doc: fig pdf html rtf man
 
 pdf: ifm.pdf
+
+rtf: ifm.rtf
 
 fig: cover.eps example.eps advent.eps
 
@@ -397,9 +399,10 @@ mantest: man
 
 .lyx.ps:;	lyx --export ps $< > $@
 .lyx.tex:;	lyx --export latex $< > $@
+.lyx.pdf:;	tex2pdf -t "$(PDF_TITLE)" -a "$(PDF_AUTHOR)" $<
+.lyx.rtf:;	lyx2rtf -d2 $<
 .ps.gv:;	gv -a4 -scale -1 -spartan $<
 .tex.aux:;	latex $<; latex $<; latex $<
-.lyx.pdf:;	tex2pdf -t "$(PDF_TITLE)" -a "$(PDF_AUTHOR)" $<
 .ifm.fig:;	$(IFMCMD) -m -f fig -o $@ $<
 .fig.eps:;	fig2dev -L eps $< > $@
 .fig.png:;	fig2dev -L png $< > $@
